<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/burger"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/burgerButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/fries"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/friesButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/pizza"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/pizzaButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/hot_dog"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/hot_dogButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/chicken"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/chickenButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/sandwich"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/sandwichButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/taco"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/tacoButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/burrito"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/burritoButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/salad"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/saladButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/sushi"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/sushiButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/pancakes"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/pancakesButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/cake"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/cakeButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/donut"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/donutButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/ice_cream"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/ice_creamButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="50dp">

            <TextView
                android:layout_weight="1"
                android:text="@string/soda"
                android:textSize="25sp"
                android:textColor="#0a0a0a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/sodaButton"
                android:layout_weight="1"
                android:text="Add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="200dp"
            android:layout_height="50dp"/>

        <Button
            android:onClick="placeOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Place order"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>

